--- a/HitomiScrollViewerWebApp/Layout/EmptyLayout.razor
+++ b/HitomiScrollViewerWebApp/Layout/EmptyLayout.razor
@@ -4,7 +4,7 @@
 <MudPopoverProvider />
 
 <MudLayout>
-    <MudMainContent Style="height: 100dvh">
+    <MudMainContent Style="height: 100dvh; padding-top: 0px;">
         @Body
     </MudMainContent>
 </MudLayout>
