--- a/HitomiScrollViewerWebApp/Pages/GalleryViewPage.razor
+++ b/HitomiScrollViewerWebApp/Pages/GalleryViewPage.razor
@@ -4,13 +4,33 @@
 
 <PageTitle>@((_gallery == null ? "" : _gallery.Title) + " - " + GalleryId.ToString())</PageTitle>
 
-<div class="d-flex" style="width: 100%; height: 100%;">
-    @for (int i = 0; i < _imageUrls.GetLength(0); i++) {
-        <picture>
-            @for (int j = 0; j < Constants.IMAGE_FILE_EXTS.Length - 1; j++) {
-                <source srcset=@(_imageUrls[i,j]) type=@($"image/{Constants.IMAGE_FILE_EXTS[j]}") />
+@if (_gallery != null) {
+    <div style="height: 100%; outline: none;" tabindex="-1" onkeydown="@OnKeyDown">
+        <div class="d-flex justify-center gap-8" style="height: 70px;">
+            <div class="d-flex gap-4">
+                <MudFab StartIcon="@Icons.Material.Filled.KeyboardArrowLeft"
+                        Disabled="@(!CanDecrement())"
+                        OnClick="@(() => Decrement())" />
+                <MudFab StartIcon="@Icons.Material.Filled.KeyboardArrowRight"
+                        Disabled="@(!CanIncrement())"
+                        OnClick="@(() => Increment())" />
+            </div>
+            <MudNumericField T="int"
+                             @bind-Value="@_pageCount"
+                             Label="Page Count"></MudNumericField>
+            <MudNumericField T="int"
+                             @bind-Value="@_pageOffset"
+                             Label="Page Offset"></MudNumericField>
+        </div>
+        <div class="d-flex justify-center" style="height: calc(100% - 80px);">
+            @for (int i = GetStartIndex(); i <= GetEndIndex(); i++) {
+                <picture>
+                    @for (int j = 0; j < Constants.IMAGE_FILE_EXTS.Length - 1; j++) {
+                        <source srcset=@(Utils.GetImageUrl(_baseImageUrl, i, j)) type=@($"image/{Constants.IMAGE_FILE_EXTS[j]}") />
+                    }
+                    <img src=@(Utils.GetImageUrl(_baseImageUrl, i, Constants.IMAGE_FILE_EXTS.Length - 1)) style="max-height: 100%; max-width: 100%;" />
+                </picture>
             }
-            <img src=@(_imageUrls[i,Constants.IMAGE_FILE_EXTS.Length - 1]) style="height: 100%" />
-        </picture>
-    }
-</div>
+        </div>
+    </div>
+}
