implemented basic GalleryViewPage structure and created ViewConfiguration

--- a/HitomiScrollViewerWebApp/Pages/BrowsePage.razor
+++ b/HitomiScrollViewerWebApp/Pages/BrowsePage.razor
@@ -19,8 +19,8 @@
         </MudButton>
         <MudPagination ShowFirstButton ShowLastButton
                        MiddleCount="8"
-                       Count="@_pageCount"
-                       Selected="@_page"
+                       Count="@_numOfPages"
+                       Selected="@_pageNum"
                        SelectedChanged="@OnPageNumChanged" />
         <MudNumericField T="int"
                          Label="Items "
