--- a/HitomiScrollViewerWebApp/Pages/SettingsPage.razor
+++ b/HitomiScrollViewerWebApp/Pages/SettingsPage.razor
@@ -1,5 +1,8 @@
 ﻿@page "/settings"
 
+<PageTitle>Settings</PageTitle>
+
+@* TODO set default ViewConfiguration here *@
 
 <div class="pa-8">
     <MudText Typo="Typo.h4" Class="mb-8">Settings</MudText>
