--- a/HitomiScrollViewerWebApp/Pages/DownloadPage.razor
+++ b/HitomiScrollViewerWebApp/Pages/DownloadPage.razor
@@ -25,7 +25,8 @@
         <div class="d-flex gap-4 align-center">
             <MudSwitch T="bool"
                        Label="Parallel Download"
-                       @bind-Value="@UseParallelDownload" />
+                       @bind-Value="@UseParallelDownload"
+                       Color="Color.Primary"/>
             <MudNumericField T="int"
                              Label="Download Threads"
                              Variant="Variant.Outlined"
