--- a/HitomiScrollViewerWebApp/Pages/GalleryViewPage.razor
+++ b/HitomiScrollViewerWebApp/Pages/GalleryViewPage.razor
@@ -2,51 +2,155 @@
 
 @page "/gallery/{GalleryId:int}"
 
-<PageTitle>@((_gallery == null ? "" : _gallery.Title) + " - " + GalleryId.ToString())</PageTitle>
+<PageTitle>@((_gallery == null ? "" : _gallery.Title + " - ") + GalleryId.ToString())</PageTitle>
 
 @if (_gallery != null) {
-    <div style="height: 100%; outline: none;" tabindex="-1" onkeydown="@OnKeyDown">
-        <div class="d-flex justify-center gap-8" style="height: 70px;">
-            <div class="d-flex gap-4">
-                <MudFab StartIcon="@Icons.Material.Filled.NavigateBefore"
-                Disabled="@(!CanDecrement())"
-                OnClick="@(() => Decrement())" />
-                <MudFab StartIcon="@Icons.Material.Filled.NavigateNext"
-                Disabled="@(!CanIncrement())"
-                OnClick="@(() => Increment())" />
-            </div>
-            <MudNumericField T="int"
-            @bind-Value="@ViewConfiguration.ImagesPerPage"
-            Label="Page Count"
-            Min="1" Max="@_gallery.GalleryImagesCount" />
-            <MudNumericField T="int"
-            @bind-Value="@_pageOffset"
-            Label="Page Offset"
-            Min="0" Max="@(ViewConfiguration.ImagesPerPage - 1)" />
-            <MudSelect T="@(ViewMode)"/>
+    <MudToolBar Class="gap-4" Style="height: 80px;">
+        <div class="d-flex gap-4">
+            <MudFab StartIcon="@Icons.Material.Filled.NavigateBefore"
+                    Disabled="@(!CanDecrement())"
+                    OnClick="@(() => Decrement())" />
+            <MudFab StartIcon="@Icons.Material.Filled.NavigateNext"
+                    Disabled="@(!CanIncrement())"
+                    OnClick="@(() => Increment())" />
         </div>
-        <div class="d-flex justify-center" style="height: calc(100% - 80px);">
-            @if (ViewConfiguration.ViewDirection == ViewDirection.LTR)
-            {
-                @for (int i = GetStartIndex(); i <= GetEndIndex(); i++) {
-                    <picture>
-                        @for (int j = 0; j < Constants.IMAGE_FILE_EXTS.Length - 1; j++) {
-                            <source srcset=@(Utils.GetImageUrl(_baseImageUrl, i, j)) type=@($"image/{Constants.IMAGE_FILE_EXTS[j]}") />
+        <MudSelect T="ViewMode"
+                   Label="View Mode"
+                   Disabled="@_isAutoScrolling"
+                   Value=_viewConfiguration.ViewMode
+                   ValueChanged="@OnViewModeChanged"
+                   Variant="Variant.Outlined"
+                   Style="max-width: 120px">
+            <MudSelectItem T="ViewMode" Value="ViewMode.Default" />
+            <MudSelectItem T="ViewMode" Value="ViewMode.Scroll" />
+        </MudSelect>
+        <MudSelect T="FitMode"
+                   Label="Fit Mode"
+                   @bind-Value=@_fitMode
+                   Variant="Variant.Outlined"
+                   Style="max-width: 120px">
+            <MudSelectItem T="FitMode" Value="FitMode.Auto" />
+            <MudSelectItem T="FitMode" Value="FitMode.Horizontal" />
+            <MudSelectItem T="FitMode" Value="FitMode.Vertical" />
+        </MudSelect>
+        <MudNumericField T="int"
+                         @bind-Value="@_pageIndex"
+                         Label="Page"
+                         Min="1" Max=@(_imageIndexRanges.Length + 1)
+                         Variant="Variant.Outlined"
+                         Style="max-width: 90px" />
+        <MudNumericField T="int"
+                         @bind-Value="@_viewConfiguration.ImagesPerPage"
+                         Label=@(_viewConfiguration.ImageLayoutMode == ImageLayoutMode.Automatic ? "Maximum Images per Page" : "Images per Page")
+                         Min="1" Max=@Math.Min(4, _gallery.Images.Count)
+                         Variant="Variant.Outlined" />
+        <MudNumericField T="int"
+                         Value="@_pageOffset"
+                         ValueChanged="@OnPageOffsetChanged"
+                         Label="Page Offset"
+                         Min="0" Max="@(_viewConfiguration.ImagesPerPage - 1)"
+                         Variant="Variant.Outlined"
+                         Style="max-width: 120px" />
+        <MudSwitch T="bool" Label="Loop" @bind-Value=_viewConfiguration.Loop Color="Color.Primary" />
+        <MudSelect T="ImageLayoutMode"
+                   Label="Image Layout Mode"
+                   Value=@_viewConfiguration.ImageLayoutMode
+                   ValueChanged="@OnImageLayoutModeChange"
+                   Variant="Variant.Outlined"
+                   Style="max-width: 200px">
+            <MudSelectItem T="ImageLayoutMode" Value="ImageLayoutMode.Automatic" />
+            <MudSelectItem T="ImageLayoutMode" Value="ImageLayoutMode.Fixed" />
+        </MudSelect>
+        <MudSelect T="ViewDirection"
+                   Label="View Direction"
+                   @bind-Value=_viewConfiguration.ViewDirection
+                   Variant="Variant.Outlined">
+            <MudSelectItem T="ViewDirection" Value="ViewDirection.LTR">Left to Right</MudSelectItem>
+            <MudSelectItem T="ViewDirection" Value="ViewDirection.RTL">Right to Left</MudSelectItem>
+        </MudSelect>
+        <div class="d-flex flex-column justify-center align-center">
+            <MudToggleIconButton Toggled=@_isAutoScrolling
+                                 ToggledChanged="@ToggleAutoScroll"
+                                 Icon="@Icons.Material.Filled.PlayArrow"
+                                 ToggledIcon="@Icons.Material.Filled.Pause"
+                                 ToggledColor="Color.Primary"/>
+            <span style="margin: auto;">@(_isAutoScrolling ? "Pause" : "Play")</span>
+        </div>
+        @if (_viewConfiguration.ViewMode == ViewMode.Default) {
+            <MudSlider T="int" ValueLabel
+                       Min="1" Max="20"
+                       @bind-Value=_viewConfiguration.AutoPageFlipInterval
+                       Style="max-width: 200px">
+                Auto Page Flip Interval
+            </MudSlider>
+        } else {
+            <MudSelect T="AutoScrollMode"
+                       Label="Auto Scroll Mode"
+                       @bind-Value=_viewConfiguration.AutoScrollMode
+                       Variant="Variant.Outlined">
+                <MudSelectItem T="AutoScrollMode" Value="AutoScrollMode.Continuous" />
+                <MudSelectItem T="AutoScrollMode" Value="AutoScrollMode.Discrete" />
+            </MudSelect>
+            @if (_viewConfiguration.AutoScrollMode == AutoScrollMode.Continuous) {
+                <MudSlider T="int" ValueLabel
+                           Min="1" Max="100"
+                           @bind-Value=_viewConfiguration.AutoScrollSpeed
+                           Style="max-width: 200px">
+                    Auto Scroll Speed
+                </MudSlider>
+            } else {
+                <MudSlider T="int" ValueLabel
+                           Min="1" Max="@_browserWindowSize.Height"
+                           @bind-Value=_viewConfiguration.AutoScrollDistance
+                           Style="max-width: 200px">
+                    Auto Scroll Distance
+                </MudSlider>
+                <MudSlider T="int" ValueLabel
+                           Min="1" Max="20"
+                           @bind-Value=_viewConfiguration.AutoScrollInterval
+                           Style="max-width: 200px">
+                    Auto Scroll Interval
+                </MudSlider>
+            }
+        }
+    </MudToolBar>
+    @if (_imageIndexRanges.Length > 0) {
+        <div style="outline: none; background-color: black;" tabindex="-1" onkeydown="@OnKeyDown">
+            @if (_viewConfiguration.ViewMode == ViewMode.Default) {
+                <div class="d-flex justify-center">
+                    @if (_viewConfiguration.ViewDirection == ViewDirection.LTR) {
+                        @for (int i = _imageIndexRanges[_pageIndex - 1].Start.Value + 1; i < _imageIndexRanges[_pageIndex - 1].End.Value + 1; i++) {
+                            <img src=@($"{_baseImageUrl}&index={i}") alt=@($"Image {i}")
+                                 onclick="@OnImageClick"
+                                 style="width: @(_fitMode == FitMode.Horizontal ? ((double)_browserWindowSize.Width / _viewConfiguration.ImagesPerPage).ToString() + "px" : "auto");
+                                        height: @(_fitMode == FitMode.Vertical ? (_browserWindowSize.Height - 80).ToString() + "px" : "auto")" />
                         }
-                        <img src=@(Utils.GetImageUrl(_baseImageUrl, i, Constants.IMAGE_FILE_EXTS.Length - 1)) style="max-height: 100%; max-width: 100%;" />
-                    </picture>
-                }
-            } else
-            {
-                @for (int i = GetEndIndex(); i >= GetStartIndex(); i--) {
-                    <picture>
-                        @for (int j = 0; j < Constants.IMAGE_FILE_EXTS.Length - 1; j++) {
-                            <source srcset=@(Utils.GetImageUrl(_baseImageUrl, i, j)) type=@($"image/{Constants.IMAGE_FILE_EXTS[j]}") />
+                    } else {
+                        @for (int i = _imageIndexRanges[_pageIndex - 1].End.Value; i > _imageIndexRanges[_pageIndex - 1].Start.Value; i--) {
+                            <img src=@($"{_baseImageUrl}&index={i}") alt=@($"Image {i}")
+                                 onclick="@OnImageClick"
+                                 style="width: @(_fitMode == FitMode.Horizontal ? ((double)_browserWindowSize.Width / _viewConfiguration.ImagesPerPage).ToString() + "px" : "auto");
+                                        height: @(_fitMode == FitMode.Vertical ? (_browserWindowSize.Height - 80).ToString() + "px" : "auto")" />
                         }
-                        <img src=@(Utils.GetImageUrl(_baseImageUrl, i, Constants.IMAGE_FILE_EXTS.Length - 1)) style="max-height: 100%; max-width: 100%;" />
-                    </picture>
-                }
+                    }
+                </div>
+            } else {
+                <div>
+                    @foreach (Range range in _imageIndexRanges) {
+                        <div class="d-flex justify-center">
+                            @if (_viewConfiguration.ViewDirection == ViewDirection.LTR) {
+                                @for (int i = range.Start.Value + 1; i < range.End.Value + 1; i++) {
+                                    <img src=@($"{_baseImageUrl}&index={i}") alt=@($"Image {i}") onclick="@OnImageClick" />
+                                }
+                            } else {
+                                @for (int i = range.End.Value; i > range.Start.Value; i--) {
+                                    <img src=@($"{_baseImageUrl}&index={i}") alt=@($"Image {i}") onclick="@OnImageClick" />
+                                }
+                            }
+                        </div>
+                    }
+                </div>
             }
         </div>
-    </div>
+    }
 }
