--- a/HitomiScrollViewerWebApp/Components/GalleryBrowseItem.razor
+++ b/HitomiScrollViewerWebApp/Components/GalleryBrowseItem.razor
@@ -5,12 +5,7 @@
         <a href=@($"/gallery/{Gallery.Id}") target="_blank">
             <div class="d-flex" style="width: 100%; height: 150px;">
                 @for (int i = 1; i <= MAX_THUMBNAIL_IMAGES; i++) {
-                    <picture>
-                        @for (int j = 0; j < Constants.IMAGE_FILE_EXTS.Length - 1; j++) {
-                            <source srcset=@(Utils.GetImageUrl(_baseImageUrl, i, j)) type=@($"image/{Constants.IMAGE_FILE_EXTS[j]}") />
-                        }
-                        <img src=@(Utils.GetImageUrl(_baseImageUrl, i, Constants.IMAGE_FILE_EXTS.Length - 1)) style="height: 100%" />
-                    </picture>
+                    <img src=@($"{_baseImageUrl}&index={i}") alt=@($"Image {i}") />
                 }
             </div>
         </a>
